Closed
Bug 1105215
Opened 8 years ago
Closed 8 years ago
BlockingResourceBase.cpp doesn't build when MOZ_CALLSTACK_DISABLED is not defined.
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: kk1fff, Assigned: kk1fff)
Details
Attachments
(1 file)
1.18 KB,
patch
|
n.nethercote
:
review+
|
Details | Diff | Splinter Review |
I try to comment out #define MOZ_CALLSTACK_DISABLED to get more information about the stack trace of locks. But the code doesn't build after enabling call stack.
Assignee | ||
Updated•8 years ago
|
Attachment #8528995 -
Flags: review?(n.nethercote)
![]() |
||
Comment 1•8 years ago
|
||
Comment on attachment 8528995 [details] [diff] [review] Patch Review of attachment 8528995 [details] [diff] [review]: ----------------------------------------------------------------- Thank you for fixing this.
Attachment #8528995 -
Flags: review?(n.nethercote) → review+
Assignee | ||
Comment 2•8 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/1e6ed5eab5e1
Assignee: nobody → kk1fff
Comment 3•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/1e6ed5eab5e1
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Updated•8 years ago
|
Target Milestone: mozilla37 → mozilla36
You need to log in
before you can comment on or make changes to this bug.
Description
•