Bug 1105215: fix build break when MOZ_CALLSTACK_DISABLED is not defined. r=njn