xpcom/glue/BlockingResourceBase.cpp
@@ -187,9 +187,11 @@ BlockingResourceBase::Print(nsACString& aOut) const
   for (uint32_t i = 0; i < state.Length(); i++) {
     const size_t kMaxLength = 1024;
     char buffer[kMaxLength];
-    addressService.GetLocation(state[i], buffer, kMaxLength);
+    addressService.GetLocation(i + 1, state[i], buffer, kMaxLength);
     const char* fmt = "    %s\n";
-    aOut += nsPrintfCString(fmt, buffer);
+    aOut.AppendLiteral("    ");
+    aOut.Append(buffer);
+    aOut.AppendLiteral("\n");
     fprintf(stderr, fmt, buffer);
   }
 
